[gd_scene load_steps=4 format=3 uid="uid://dpjbpxkwuywxl"]

[ext_resource type="Script" path="res://scripts/main/Main.gd" id="1_8xkww"]
[ext_resource type="Script" path="res://scripts/world/WorldRenderer.gd" id="2_x9kbm"]

[sub_resource type="Environment" id="Environment_1qtb4"]
background_mode = 1
background_color = Color(0.529412, 0.807843, 0.921569, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.5

[node name="Main" type="Node2D"]
script = ExtResource("1_8xkww")

[node name="Camera2D" type="Camera2D" parent="."]
enabled = true
zoom = Vector2(2, 2)

[node name="World" type="Node2D" parent="."]

[node name="WorldRenderer" type="Node2D" parent="World"]
script = ExtResource("2_x9kbm")

[node name="UI" type="CanvasLayer" parent="."]

[node name="DebugUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="DebugPanel" type="Panel" parent="UI/DebugUI"]
layout_mode = 0
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.5
anchor_bottom = 0.3
color = Color(0, 0, 0, 0.5)

[node name="DebugLabel" type="RichTextLabel" parent="UI/DebugUI/DebugPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
bbcode_enabled = true
text = "[b]Nexumi Debug Info[/b]
FPS: 60
Player Position: (0, 0)
Current Biome: Grassland
Loaded Chunks: 0
Game State: Playing"
fit_content = true

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="UI/HUD"]
layout_mode = 0
anchor_left = 0.02
anchor_top = 0.9
anchor_right = 0.3
anchor_bottom = 0.95
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
anchor_left = 0.02
anchor_top = 0.85
anchor_right = 0.3
anchor_bottom = 0.9
text = "Health: 100/100"
horizontal_alignment = 1

[node name="Instructions" type="Label" parent="UI/HUD"]
layout_mode = 0
anchor_left = 0.7
anchor_top = 0.85
anchor_right = 0.98
anchor_bottom = 0.98
text = "Controls:
WASD/Arrow Keys - Move
E - Interact
I - Inventory
Left Click - Attack
Right Click - Use Tool"
horizontal_alignment = 2
vertical_alignment = 1 